# taskwarrior-reminders-sync

./: .gitignore  Package.swift  README.md  install.sh  pyproject.toml
Sources/TWRemindersListener/: main.swift
config/: com.tw-reminders-sync.plist.template
src/tw_reminders/: __init__.py  config.py  sync_from_reminders.py  sync_state.py
src/tw_reminders/hooks/: on_add.py  on_modify.py
