[project]
name = "tw-reminders"
version = "0.1.0"
description = "Bidirectional sync between Taskwarrior and Apple Reminders"
requires-python = ">=3.11"
dependencies = [
    "tasklib>=2.5.0",
]

[project.scripts]
tw-sync = "tw_reminders.sync_from_reminders:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tw_reminders"]
